Content updates for HAS LPAQ

--- a/app/views/manage/access/v2/access-email.html
+++ b/app/views/manage/access/v2/access-email.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Enter your email address' %}
+{% set title = 'Tell us your email address' %}
 
 {% set prototypeLinks = [
   {
@@ -22,7 +22,7 @@
       isPageHeading: true
     },
     hint: {
-      html: 'We’ll send an access code to this address, if you have an account.'
+      html: 'If we recognise this address, we will send you a code.'
     },
     type: 'email',
     autocomplete: 'email',
