--- a/app/views/manage/access/v2/enter-code.html
+++ b/app/views/manage/access/v2/enter-code.html
@@ -20,7 +20,11 @@
     </label>
 
     <p class="govuk-body">
-      This has been emailed to the address you gave us, if you have an account.
+      Find this in the email we sent you. The email may take a few minutes to arrive.
+    </p>
+
+    <p class="govuk-body">
+      Be aware that this code will expire 30 minutes after we send it.
     </p>
 
     <div class="govuk-form-group">
@@ -31,20 +35,17 @@
   <details class="govuk-details" data-module="govuk-details">
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
-      My code did not arrive
+      My code did not arrive or does not work
     </span>
   </summary>
   <div class="govuk-details__text">
-    <p class="govuk-body">
-      If your code is not in your inbox, it might be because:
-    </p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>you entered the wrong address</li>
-      <li>you do not have an account</li>
-      <li>it’s in your spam or junk mail</li>
+      <li>you may have made a mistake with your email address</li>
+      <li>check your junk or spam folder</li>
+      <li>the code has expired</li>
     </ul>
     <p class="govuk-body">
-      If you’re sure it’s none of these, you can <a href="request-code" class="govuk-!-margin-bottom-9">get a new code</a>.
+      <a href="request-code" class="govuk-!-margin-bottom-9">Get a new code</a>
     </p>
   </div>
 </details>
