--- a/app/views/manage/access/v2/request-code.html
+++ b/app/views/manage/access/v2/request-code.html
@@ -33,7 +33,7 @@
       </label>
 
       <p class="govuk-body">
-        Emails sometimes take a few minutes to arrive. If you do not receive the code, you can request a new one.
+        We will send a new one to your email address.
       </p>
 
       {{ govukButton({
