--- a/app/views/manage/appeals/v4/index-alt.html
+++ b/app/views/manage/appeals/v4/index-alt.html
@@ -183,11 +183,11 @@
         {% else %}
 
           <h2 class="govuk-heading-l govuk-!-margin-top-3">
-            Current appeals
+            Appeals in progress
           </h2>
 
           <p class="govuk-body">
-            There are no current appeals to action
+            There are no appeals in progress.
           </p>
 
         {% endif %}
@@ -245,11 +245,11 @@
         {% elif data['received-appeals'] == 'no' %}
 
           <h2 class="govuk-heading-l govuk-!-margin-top-3">
-            Received appeals
+            New appeals received
           </h2>
 
           <p class="govuk-body">
-            There are no received appeals
+            There are no receieved appeals.
           </p>
 
         {% endif %}
@@ -318,11 +318,11 @@
         {% else %}
 
           <h2 class="govuk-heading-l govuk-!-margin-top-3">
-            Submitted appeals
+            Appeals you have returned
           </h2>
 
           <p class="govuk-body">
-            There are no submitted appeals
+            There are no returned appeals.
           </p>
 
         {% endif %}
