--- a/app/views/manage/appeals/v4/index.html
+++ b/app/views/manage/appeals/v4/index.html
@@ -187,7 +187,7 @@
           </h2>
 
           <p class="govuk-body">
-            There are no current appeals to action
+            There are no appeals in progress.
           </p>
 
         {% endif %}
@@ -241,11 +241,11 @@
         {% elif data['received-appeals'] == 'no' %}
 
           <h2 class="govuk-heading-m">
-            Received appeals
+            New appeals received
           </h2>
 
           <p class="govuk-body">
-            There are no received appeals
+            There are no receieved appeals.
           </p>
 
         {% endif %}
@@ -314,11 +314,11 @@
         {% else %}
 
           <h2 class="govuk-heading-l">
-            Submitted appeals
+            Appeals you have returned
           </h2>
 
           <p class="govuk-body">
-            There are no submitted appeals
+            There are no returned appeals.
           </p>
 
         {% endif %}
