--- a/app/views/manage/manage-users/v3/index.html
+++ b/app/views/manage/manage-users/v3/index.html
@@ -24,7 +24,7 @@
           <h3 class="govuk-notification-banner__heading">
             {{ data['add-user-email'] or 'example' }}{{ data['lpa-email'] }} has been added to the account
           </h3>
-          <p class="govuk-body">They will receive an email with a link to the service.</p>
+          <p class="govuk-body">They will get an email with a link to the service.</p>
         </mark>
       {% endset %}
 
@@ -48,7 +48,7 @@
       </h1>
 
       <p class="govuk-body">
-        All users can add information to appeals. When a new appeal is added and a task is submitted, an email notification will be sent to all users.
+        All users can add information to appeals. When a new appeal is added and a task is submitted, they will all be notified by email.
       </p>
 
       <p class="govuk-body">
