--- a/app/views/manage/questionnaire-has/v2/appeal-process/other-appeal-reference.html
+++ b/app/views/manage/questionnaire-has/v2/appeal-process/other-appeal-reference.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Enter an appeal reference' %}
+{% set title = 'Enter an appeal reference number' %}
 
 {% block questions %}
 
@@ -12,7 +12,7 @@
     },
     classes: "govuk-input--width-10",
     hint: {
-      text: "An appeal reference number is 7 digits, you can add more later"
+      text: "You can add more appeals later if there is more than one nearby"
     },
     id: "other-appeal-reference",
     name: "other-appeal-reference",
