--- a/app/views/manage/questionnaire-has/v2/notified/notified-how.html
+++ b/app/views/manage/questionnaire-has/v2/notified/notified-how.html
@@ -20,9 +20,9 @@
     items: [
 
       {
-        html: 'Site notice',
+        html: 'A public notice at the site',
         value: 'Site notice',
-        checked: checked('notified-how','A site notice')
+        checked: checked('notified-how','Site notice')
       },
       {
         html: 'Letters to neighbours',
@@ -30,7 +30,7 @@
         checked: checked('notified-how','Letters to neighbours')
       },
       {
-        html: 'Advertisement',
+        html: 'Advert in the local press',
         value: 'Advertisement',
         checked: checked('notified-how','Advertisement')
       }
