--- a/app/views/manage/questionnaire-has/v2/site-access/health-and-safety.html
+++ b/app/views/manage/questionnaire-has/v2/site-access/health-and-safety.html
@@ -21,28 +21,33 @@
   </h1>
 
   <p class="govuk-body">
-    Inspectors need to know how to prepare for a visit and what to bring.
+    You need to tell inspectors how to prepare for a site visit and what to bring.
   </p>
 
-  <p class="govuk-!-margin-bottom-2">For example, tell us about:</p>
+  <p class="govuk-!-margin-bottom-2">
+    What you tell us might include:
+  </p>
   <ul class="govuk-list govuk-list--bullet">
     <li>
-      no or limited mobile reception
+      there is no, or limited mobile reception
     </li>
     <li>
-      if ladders or other access equipment is needed
+      access is blocked
     </li>
     <li>
-      the need to wear high-visibility clothes or a hard hat
+      ladders or other equipment is needed
     </li>
     <li>
-      livestock or other animals
+      site health and safety rules need to be followed (for instance, a hard hat, boots and hi visibility clothing)
     </li>
     <li>
-      blocked access to areas, for example because of debris or overgrown vegetation
+      there is livestock or other animals
     </li>
     <li>
-      the potential for hazardous materials on site, such as asbestos
+      there is dangerous debris or overgrown vegetation
+    </li>
+    <li>
+      there is potentially hazardous material, such as asbestos
     </li>
   </ul>
 
