--- a/app/views/manage/questionnaire-has/v2/site-access/neighbours-address.html
+++ b/app/views/manage/questionnaire-has/v2/site-access/neighbours-address.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Add neighbouring site address' %}
+{% set title = 'Tell us the address of the neighbouring site' %}
 
 {% block questions %}
 
