--- a/app/views/manage/questionnaire-has/v2/task-list__notified.html
+++ b/app/views/manage/questionnaire-has/v2/task-list__notified.html
@@ -1,6 +1,6 @@
 <li>
   <h2 class="app-task-list__section">
-    <span class="app-task-list__section-number">2. </span> Notifying people about the application
+    <span class="app-task-list__section-number">2. </span> Notifying relevant parties of the application
     {% if data['notified-completed'] == 'true' %}
       {{ govukTag({
         html: 'Completed'
