--- a/app/views/manage/questionnaire-has/v2/task-list__site-access.html
+++ b/app/views/manage/questionnaire-has/v2/task-list__site-access.html
@@ -23,7 +23,7 @@
 
       {
         key: {
-          html: 'Inspector access'
+          html: 'Access for inspection'
         },
         value: {
           html: 'Yes' if data['site-entry'] == 'Yes' else 'No'
