--- a/app/views/manage/manage-users/v3/add-user--confirm.html
+++ b/app/views/manage/manage-users/v3/add-user--confirm.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Confirm you want to add this user' %}
+{% set title = 'Confirm that you want to add this user' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
