--- a/app/views/manage/manage-users/v3/add-user.html
+++ b/app/views/manage/manage-users/v3/add-user.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'What is their email address?' %}
+{% set title = 'Tell us their email address' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
