--- a/app/views/manage/questionnaire-has/v2/appeal-process/other-appeals.html
+++ b/app/views/manage/questionnaire-has/v2/appeal-process/other-appeals.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'An appeal has been added to the case' %}
+{% set title = 'Nearby appeal added to the case' %}
 
 {% set prototypeLinks = [
   {
