--- a/app/views/manage/questionnaire-has/v2/constraints/affected-listed-building-details.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/affected-listed-building-details.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Add the listed entry number' %}
+{% set title = 'Tell us the list entry number for the site' %}
 
 {% block questions %}
   <div class="govuk-form-group">
