LPA appeals list in 3 tabs

--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -38,7 +38,7 @@
           new tab for submitted appeals
         </li>
         <li>
-          list for received appeals
+          new tab for received appeals
         </li>
       </ul>
 
@@ -54,6 +54,12 @@
 
       <p class="govuk-!-margin-bottom-2">Different states:</p>
       <ul class="govuk-list govuk-list--bullet">
+
+        <li>
+          <a href="v4/index-simple?action=&questionnaire=&submitted-appeals=yes&current-appeals=yes&received-appeals=yes">
+            No extra tabs (MVP)
+          </a>
+        </li>
 
         <li>
           <a href="v4/?action=&questionnaire=&submitted-appeals=yes&current-appeals=yes&received-appeals=yes">
