--- a/app/views/manage/appeals/v4/index-2-tabs.html
+++ b/app/views/manage/appeals/v4/index-2-tabs.html
@@ -182,8 +182,8 @@
 
         {% else %}
 
-          <h2 class="govuk-heading-l govuk-!-margin-top-3">
-            Appeals in progress
+          <h2 class="govuk-heading-l">
+            Current appeals
           </h2>
 
           <p class="govuk-body">
@@ -192,16 +192,12 @@
 
         {% endif %}
 
-      {% endset -%}
-
-      {% set receivedAppeals %}
-
         {% if data['received-appeals'] == 'yes' %}
 
           {{ govukTable({
             classes: 'govuk-!-margin-top-3',
             caption: 'New appeals received',
-            captionClasses: 'govuk-table__caption--l',
+            captionClasses: 'govuk-table__caption--m',
             firstCellIsHeader: false,
             head: [
               {
@@ -244,7 +240,7 @@
 
         {% elif data['received-appeals'] == 'no' %}
 
-          <h2 class="govuk-heading-l govuk-!-margin-top-3">
+          <h2 class="govuk-heading-m">
             New appeals received
           </h2>
 
@@ -317,7 +313,7 @@
 
         {% else %}
 
-          <h2 class="govuk-heading-l govuk-!-margin-top-3">
+          <h2 class="govuk-heading-l">
             Appeals you have returned
           </h2>
 
@@ -333,16 +329,9 @@
         items: [
           {
             label: "Appeals list",
-            id: "appeals-list",
-            panel: {
-              html: appealsList
-            }
-          },
-          {
-            label: "Received appeals",
             id: "new-appeals",
             panel: {
-              html: receivedAppeals
+              html: appealsList
             }
           },
           {
