HAS LPAQ confirmation page content update

--- a/app/views/manage/questionnaire-has/v2/confirmation.html
+++ b/app/views/manage/questionnaire-has/v2/confirmation.html
@@ -20,7 +20,9 @@
         titleHtml: title
       }) }}
 
-      <p class="govuk-body">We&rsquo;ve sent you a confirmation email with a link to download a copy of your questionnaire.</p>
+      <p class="govuk-body">
+        We have sent you a confirmation email. You can download a copy of this questionnaire from the email.
+      </p>
 
       {{ govukInsetText({
         html: '<p class="govuk-body">You need to email a copy of your questionnaire to the appellant. This must include a copy of any documents you uploaded.</p>'
@@ -30,7 +32,8 @@
         What happens next
       </h2>
 
-      <p class="govuk-body">We&rsquo;ll review your evidence and will be in touch if we need any further information.</p>
+      <p class="govuk-body">
+        We will review your evidence and will contact you if we need any further information.</p>
 
       <p class="govuk-body">
         <a href="../../appeals/v4/??no-appeals=false&questionnaire=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
