--- a/app/views/manage/appeals/v4/index.html
+++ b/app/views/manage/appeals/v4/index.html
@@ -103,7 +103,7 @@
             rows: [
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345264&action=">1446624</a>'
+                  html: '<a href="appeal-details?appealCode=1345264&action=&questionnaire=overdue">1446624</a>'
                 },
                 {
                   html: '23/04125/FUL'
@@ -122,7 +122,7 @@
               ],
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                  html: '<a href="appeal-details?appealCode=1345264&action=&questionnaire=due">1345264</a>'
                 },
                 {
                   html: '23/04125/FUL'
@@ -141,7 +141,7 @@
               ] if data['questionnaire'] != 'complete',
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
+                  html: '<a href="appeal-details?appealCode=1345260&action=&questionnaire=due">1345260</a>'
                 },
                 {
                   html: '22/02939/FUL'
@@ -160,7 +160,7 @@
               ],
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345172&action=">1345172</a>'
+                  html: '<a href="appeal-details?appealCode=1345172&action=&questionnaire=due">1345172</a>'
                 },
                 {
                   html: '23/04122/FUL'
@@ -219,7 +219,7 @@
             rows: [
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1386155&action=">1386155</a>'
+                  html: '<a href="appeal-details?appealCode=1386155&action=&questionnaire=na">1386155</a>'
                 },
                 {
                   html: '23/04253/FUL'
@@ -230,7 +230,7 @@
               ],
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1392871&action=">1392871</a>'
+                  html: '<a href="appeal-details?appealCode=1392871&action=&questionnaire=na">1392871</a>'
                 },
                 {
                   html: '23/05009/FUL'
@@ -282,7 +282,7 @@
             rows: [
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345264&action=">1345264</a>'
+                  html: '<a href="appeal-details?appealCode=1345264&action=&questionnaire=complete">1345264</a>'
                 },
                 {
                   html: '23/04125/FUL'
@@ -298,7 +298,7 @@
               ] if data['questionnaire'] == 'complete',
               [
                 {
-                  html: '<a href="appeal-details?appealCode=1345260&action=">1345260</a>'
+                  html: '<a href="appeal-details?appealCode=1345260&action=&questionnaire=complete">1345260</a>'
                 },
                 {
                   html: '23/02939/FUL'
