--- a/app/views/manage/questionnaire-has/v2/constraints/affected-listed-buildings.html
+++ b/app/views/manage/questionnaire-has/v2/constraints/affected-listed-buildings.html
@@ -92,13 +92,11 @@
       items: [
         {
           html: 'Yes',
-          value: 'Yes',
-          checked: checked('affected-listed-buildings','Yes')
+          value: 'Yes'
         },
         {
           html: 'No',
-          value: 'No',
-          checked: checked('affected-listed-buildings','No')
+          value: 'No'
         }
       ]
     }) }}
