--- a/app/views/manage/questionnaire-has/v2/notified/notified-who.html
+++ b/app/views/manage/questionnaire-has/v2/notified/notified-who.html
@@ -8,7 +8,7 @@
   </h1>
 
   <p class="govuk-body">
-      (includes internal consultees)
+      This should include internal consultees.
   </p>
 
   {% set uploadHtml %}
