Completed questionnaire LPA dashboard appeal in 3rd tab

--- a/app/views/appeal/lbc/v2/check-your-answers.html
+++ b/app/views/appeal/lbc/v2/check-your-answers.html
@@ -970,7 +970,7 @@
 
 
         {{ govukButton({
-          html: 'Submit comments'
+          html: 'Submit appeal'
         }) }}
 
       </form>
@@ -978,11 +978,4 @@
     </div>
   </div>
 
-{% endblock %}
-
-{% block buttons %}
-  {{ govukButton({
-    text: 'Submit your comments',
-    href: 'confirmation'
-  }) }}
 {% endblock %}
