--- a/app/views/manage/appeals/index.html
+++ b/app/views/manage/appeals/index.html
@@ -52,7 +52,7 @@
         isStartButton: true
       }) }}
 
-      <p class="govuk-!-margin-bottom-2">Different states:</p>
+      <!-- <p class="govuk-!-margin-bottom-2">Different states:</p>
       <ul class="govuk-list govuk-list--bullet">
 
         <li>
@@ -90,9 +90,9 @@
             Empty dashboard, no appeals
           </a>
         </li>
-      </ul>
+      </ul> -->
 
-      <details class="govuk-details" data-module="govuk-details">
+      <!-- <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
             Alternative version using 3 tabs
@@ -135,7 +135,7 @@
           </ul>
 
         </div>
-      </details>
+      </details> -->
 
     </section>
 
