Adding researched links to LPA HAS

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -98,7 +98,16 @@
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Appeal tasks
+        Householder appeals
+      </h3>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="manage/questionnaire-has/">Householder questionnaire</a>
+        </li>
+      </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+        Full appeals (S78)
       </h3>
       <ul class="govuk-list govuk-list--bullet">
         <li>
@@ -106,9 +115,6 @@
         </li>
         <li>
           <a href="manage/questionnaire/">S78 questionnaire</a>
-        </li>
-        <li>
-          <a href="manage/questionnaire-has/">Householder questionnaire</a>
         </li>
         <li>
           <a href="manage/statement/">Appeal statement</a>
