--- a/app/views/manage/access/index.html
+++ b/app/views/manage/access/index.html
@@ -26,10 +26,17 @@
     <h2 class="govuk-heading-m">
       Version {{version}}
       {{ govukTag({
-        classes: 'govuk-tag--green govuk-!-margin-left-2',
-        text: 'Ready for research'
+        classes: 'govuk-tag--blue govuk-!-margin-left-2',
+        text: 'Researched'
       }) }}
     </h2>
+
+    <p>
+      Researched January 2023<br>
+      <a href="https://pins-ds.atlassian.net/l/cp/m5xUUVAn" class="govuk-link">
+        Confluence user research notes
+      </a>
+    </p>
 
     <p class="govuk-!-margin-bottom-2">
       Changes:
