LPA appeals list changes and some content updates for HAS LPAQ

--- a/app/views/_layouts/layout-main.html
+++ b/app/views/_layouts/layout-main.html
@@ -60,6 +60,10 @@
 
 			</form>
 
+			{% block afterContent %}
+				{# Option to add things after the green button / form #}
+			{% endblock %}
+
 		</div>
 	</div>
 {% endblock %}
