--- a/app/views/appeal/save-and-return/v7/enter-code.html
+++ b/app/views/appeal/save-and-return/v7/enter-code.html
@@ -16,3 +16,10 @@
   </div>
 
 {% endblock %}
+
+{% block afterContent %}
+  <p class="govuk-body">
+    <a href="enter-code--confirm-email?newcode=true" class="govuk-link">
+    Send a new code
+  </p>
+{% endblock %}
